# pythonOOF

./: .gitignore  CMakeLists.txt  README.md  distclean.cmake  pyproject.toml
cmake/Modules/: FindCoarray_Fortran.cmake  FindMKL.cmake  FindNETCDF_Fortran.cmake  FindOpenMP_Fortran.cmake  SetCompileFlag.cmake  SetMKL.cmake  SetParallelizationLibrary.cmake  SetPyOOFFlags.cmake  SetPyoofFlags.cmake
examples/: basic_operation.py
pyoof/: CMakeLists.txt  __init__.py  simulation.h  simulation.py  simulation.pyx
src/: CMakeLists.txt  driver_module.f90  main.f90
src/bind/: bind_module.f90
src/globals/: globals_module.f90  globals_module.f90.in
src/simulation/: simulation_module.f90
src/surface/: surface_module.f90
