[project]
name = "pyoof"
version = "2023.10.0"
authors=[
    {name = 'David A. Minton', email='daminton@purdue.edu'},
]
maintainers = [
    {name = 'David A. Minton', email='daminton@purdue.edu'},
]
readme = "README.md"
requires-python=">=3.8"
license={file = "LICENSE"}
classifiers=[
'Development Status :: 1 - Planning',
'Intended Audience :: Science/Research',
'Topic :: Software Development',
'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
'Programming Language :: Python :: 3',
'Programming Language :: Fortran',
'Operating System :: MacOS',
'Operating System :: POSIX :: Linux',
]
description = "PythonOOF is a working example of how one could go about building a software bridge facilitating seamless interaction between Python class objects and Modern Fortran's derived-type classes, focusing especially on those with allocatable array components and type-bound procedures."
keywords = ["Python", "Fortran", "Integration", "Software Bridge", "Derived-Type Classes", "Allocatable Arrays", "Type-Bound Procedures", "Interoperability", "Cython", "Object-Oriented Fortran", "Bindings", "API Design"]
dependencies = [
    'numpy>=1.26.1',
    'cython>=3.0.0',
]

[project.urls]
Repository = 'https://github.com/profminton/pyoof.git'

[build-system]
requires = [
    "scikit-build-core",
    "cython>=3.0.0",
    'numpy>=1.26.1',
    "pytest",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = true

[[tool.scikit-build.generate]]
path = "version.txt"
location = "source"
template = '''${version}'''

